--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,38 @@
 <script src="{{ url_for('static', filename='jquery.min.js') }}"></script>
 <script src="{{ url_for('static', filename='bootstrap.min.js') }}"></script>
 </head>
+
 <body>
-<div class="container">
-<h1 class="text-center">SAU ACM Team</h1>
+<h1 class="text-center">NiuTrans 本地翻译1</h1>
+<div class="container"> <!--容器，用于包裹页面上的内容 -->
+<form action='trans' method='post'>
+    <div class="form">
+        <h3>原文</h3>
+        <textarea class="form-control" name="yuanwen" id="yuanwen" rows="4" placeholder="请输入中文..." autofocus="" style="font-size:25px"></textarea>
+    </div>
+
+	<h3>NiuTrans译文</h3>
+        <textarea class="form-control" name="yiwen" id="yiwen" rows="4" style="font-size:25px"></textarea>
+    <br>
+    <button  class="btn btn-success pull-right" style="font-size:20px" onclick="trans()">翻译</button>
+</form>
 </div>
+<script>
+	function trans(){
+        var yiwen = document.getElementById("yiwen")
+        $.ajax({
+            url:"trans",
+            type:"post",
+            data:$('#yuanwen'),
+            beforeSend: function(){},
+            success: function(data){
+                $("#yiwen").html(data);
+            },
+            error: function(e){
+                alert('Error');
+            }
+        });
+    }	
+</script>
 </body>
 </html>
