增加在线翻译网络异常提示

--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,11 @@ function trans(){
                 $("#yiwen-online").val(result_tmp);
 
                 //$(".btn").button('reset')
-        }
+        },
+	error: function(e){
+		//alert("网络不好")
+                $("#yiwen-online").val("网络不好！请检查网络！");
+	}
         });
 
 <!-- 下面为本地翻译 -->
